# ams2dsm

./: .clang-format  .gitignore  CMakeLists.txt  CMakeSettings.json  LICENSE  dependencies.cmake  styleguide.txt  vcpkg.json
src/: Ams2DSM.cppm  config.cppm  dsm.cppm  logger.cppm  main.cpp  uuid.cppm  web_server.cppm
src/httplib/: wrapper.cppm
src/include/interfaces/web/server/: irouter.hpp  iroutes.hpp  iserver.hpp
src/include/web/: server.hpp
src/include/web/server/: application.hpp  common.hpp  controllers.hpp  cookie.hpp  core.hpp  headers.hpp  interfaces.hpp  logger.hpp  middleware.hpp  request.hpp  response.hpp  router.hpp  routes.hpp  session_manager.hpp
src/include/web/server/controller/: index.hpp  login.hpp
src/web/: server.cpp  server.cppm
src/web/controllers/: auth.cppm
src/web/server/: application.cpp  cookie.cpp  core.cpp  core.cppm  core_impl.cppm  dsm.conf.yaml  headers.cppm  interfaces.ixx  lib.cppm  logger.cpp  middleware.cpp  middleware.cppm  request.cpp  request.cppm  response.cpp  response.cppm  router.cpp  router.cppm  routes.cpp  routes.cppm  session_manager.cpp
src/web/server/controller/: index.cpp  login.cpp
src/web/server/controllers/: auth.cpp
src/web/server/middlewares/: auth.cpp
tests/: config.test.cppm  first.cppm  first.test.cppm
tests/web/: server.test.cpp  server.test.cppm
web/: index.html
web/login/: index.html
web/main/: settings.html
web/static/: index.html  styles.css
